--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -137,29 +137,16 @@ rule kmer_encoding:
     script:
         "scripts/kmer_encoding_for_sim.smk.py"
 
+#-----------------------------------up for simulate data------------------------------------------------
 
-rule alignment_of_real_data_and_reference:
+rule paf_to_read_info:
     input:
-         reference="data/regional_reads/{sample}/{region}/{platform}/genome.fasta",
-         fastq="data/regional_reads/{sample}/{region}/{platform}/reads.fastq.gz"
-    output:
-         paf="data/regional_reads/{sample}/{region}/{platform}/alignment.paf.gz"
-    conda:
-        "envs/minimap2.yaml"
-    threads: 8
-    shell:
-        """
-        minimap2 -x map-ont -t {threads} {input.reference} {input.fastq} | gzip -c > {output.paf}
-        """
-
-##only for real data
-rule paf_to_metadata:
-    input:
-        fasta="data/regional_reads/{sample}/{region}/{platform}/reads.fasta.gz",
+        fasta_aligned="data/regional_reads/{sample}/{region}/{platform}/aligned_read.fa.gz",
         paf="data/regional_reads/{sample}/{region}/{platform}/alignment.paf.gz",
     output:
         tsv="data/regional_reads/{sample}/{region}/{platform}/read_info.tsv.gz",
-        stat="data/regional_reads/{sample}/{region}/{platform}/read_usage_statistic.tsv.gz"
+        stat="data/regional_reads/{sample}/{region}/{platform}/read_usage_statistic.tsv.gz",
+        fasta="data/regional_reads/{sample}/{region}/{platform}/reads.fasta.gz",
     conda:
         "envs/default.yaml"
     script:
@@ -185,27 +172,9 @@ rule kmer_encoding_from_paf:
     script:
         "scripts/kmer_encoding.smk.py"
 
-rule kmer_encoding_test:
-    input:
-        fasta="data/regional_reads/{sample}/{region}/{platform}/reads.fasta.gz",
-        tsv="data/regional_reads/{sample}/{region}/{platform}/read_info1.tsv.gz",
-        paf="data/regional_reads/{sample}/{region}/{platform}/alignment.paf.gz",
-    output:
-        npz="data/feature_matrix/{sample}/{region}/{platform}/kmer_k{k}/feature_matrix.npz",
-        json="data/feature_matrix/{sample}/{region}/{platform}/kmer_k{k}/read_features.json.gz",
-        tsv="data/feature_matrix/{sample}/{region}/{platform}/kmer_k{k}/metadata1.tsv.gz",
-    params:
-        sample_fraction=0.05,
-        min_multiplicity=2,
-        seed=562104830,
-    wildcard_constraints:
-        k=r"\d+",
-    conda:
-        "envs/default.yaml"
-    script:
-        "scripts/kmer_encoding_for_chrs.smk.py"
+#--------------------up for real data-------------------------------------------------------------
 
-
+##
 rule run_minimap2_ava:
     input:
         fasta="data/regional_reads/{sample}/{region}/{platform}/reads.fasta.gz",
@@ -215,19 +184,17 @@ rule run_minimap2_ava:
         preset="ava-ont",
     conda:
         "envs/minimap2.yaml"
-    threads: 32
+    threads: 120
     shell:
         """
-        minimap2 -x {params.preset} -t {threads} {input.fasta} {input.fasta} | gzip -c > {output.paf_minimap2}
+        minimap2 -x {params.preset} -t {threads} {input.fasta} {input.fasta}| gzip -c > {output.paf_minimap2}
         """
-
 
 rule run_daligner:
     input:
         fasta="data/regional_reads/{sample}/{region}/{platform}/reads.fasta.gz",
     output:
         maf="data/daligner/{sample}/{region}/{platform}/alignment.maf.gz",
-    
     params:
         k = 16,
         average_correlation=".9",
@@ -239,16 +206,15 @@ rule run_daligner:
     shell:
         """
         daligner \
-          -k{params.k} \
-          -e{params.average_correlation} \
-          -l{params.min_alignment_length} \
-          -s{params.min_alignment_score} \
-          -T{threads} \
-          -v \
-          {input.fasta} {input.fasta} \
+            -k{params.k} \
+            -e{params.average_correlation} \
+            -l{params.min_alignment_length} \
+            -s{params.min_alignment_score} \
+            -T{threads} \
+            -v \
+            {input.fasta} {input.fasta} \
         | gzip -c > {output.maf}
         """
-    
 
 rule get_neighbors:
     input:
@@ -259,7 +225,6 @@ rule get_neighbors:
         #paf_blend="data/blend/{sample}/{region}/{platform}/alignment.paf.gz",
     output:
         nbr_indice="data/evaluation/{sample}/{region}/{platform}/{encoding}/{method}_nbr_matrix.npz",
-        time_use="data/evaluation/{sample}/{region}/{platform}/{encoding}/{method}_time_usage.json",
     benchmark:
         "data/evaluation/{sample}/{region}/{platform}/{encoding}/{method}_benchmark.csv"
     log:
@@ -271,14 +236,12 @@ rule get_neighbors:
         "notebooks/get_neighbors_indice.smk.py.ipynb"
 
 
-
 rule evaluate_configs:
     input:
         feature_matrix="data/feature_matrix/{sample}/{region}/{platform}/{encoding}/feature_matrix.npz",
         read_features="data/feature_matrix/{sample}/{region}/{platform}/{encoding}/read_features.json.gz",
         metadata="data/feature_matrix/{sample}/{region}/{platform}/{encoding}/metadata.tsv.gz",
         nbr_indice="data/evaluation/{sample}/{region}/{platform}/{encoding}/{method}_nbr_matrix.npz",
-        time_use="data/evaluation/{sample}/{region}/{platform}/{encoding}/{method}_time_usage.json",
     output:
         overlap="data/evaluation/{sample}/{region}/{platform}/{encoding}/{method}_overlap_stat.tsv",
     log:
@@ -296,7 +259,6 @@ rule evaluate_and_visualize_configs:
         read_features="data/feature_matrix/{sample}/{region}/{platform}/{encoding}/read_features.json.gz",
         metadata="data/feature_matrix/{sample}/{region}/{platform}/{encoding}/metadata.tsv.gz",
         nbr_indice="data/evaluation/{sample}/{region}/{platform}/{encoding}/{method}_nbr_matrix.npz",
-        time_use="data/evaluation/{sample}/{region}/{platform}/{encoding}/{method}_time_usage.json",
 
     output:
         overlap="data/evaluation/{sample}/{region}/{platform}/{encoding}/{method}_withfig_overlap_stat.tsv",
@@ -326,7 +288,13 @@ rule only_statistic:
             'MinHash_Jaccard_None_None',
             'WeightedMinHash_Jaccard_None_None',
         ])
-
+rule only_statistic1:
+    input:
+        expand("data/evaluation/human/chr22/ONT_R9/kmer_k16/{method}_overlap_stat.tsv",
+        method=[
+            'HNSW_Cosine_scBiMap_500d_None',
+            'PQ_Cosine_scBiMap_500d_None',
+        ])
 rule statistic_and_visulization:
     input:
         expand("data/evaluation/Ecoli/all/ONT/kmer_k16/{method}_fig.png",
@@ -358,7 +326,7 @@ rule mytest2:
         method=[
         'Exact_Euclidean_None_None',
         'Exact_Euclidean_scBiMap_500d_None',
-        'Exact_Cosine_None_None',
+        'Exact_Cosine_None_None', 
         'Exact_Cosine_scBiMap_500d_None',
         'HNSW_Cosine_scBiMap_500d_None',
         'PQ_Cosine_scBiMap_500d_None',
@@ -366,3 +334,69 @@ rule mytest2:
         'MinHash_Jaccard_None_None',
         'WeightedMinHash_Jaccard_None_None'
         ])
+
+rule only_statistic2:
+    input:
+        expand("data/evaluation/human/IGH/ONT_R9/kmer_k16/{method}_overlap_stat.tsv",
+        method=[
+            'Exact_Euclidean_scBiMap_500d_None',
+            'Exact_Euclidean_None_None',
+            'Exact_Cosine_None_None',
+            'Exact_Cosine_scBiMap_500d_None',
+            'HNSW_Cosine_scBiMap_500d_None',
+            'PQ_Cosine_scBiMap_500d_None',
+            'Minimap2',
+            'MinHash_Jaccard_None_None',
+            'WeightedMinHash_Jaccard_None_None',
+            'Exact_Euclidean_scBiMap_500d_TF-IDF',
+            'Exact_Euclidean_None_TF-IDF',
+            'Exact_Cosine_None_TF-IDF',
+            'Exact_Cosine_scBiMap_500d_TF-IDF',
+            'HNSW_Cosine_scBiMap_500d_TF-IDF',
+            'PQ_Cosine_scBiMap_500d_TF-IDF',
+            'Exact_Euclidean_scBiMap_500d_TF',
+            'Exact_Euclidean_None_TF',
+            'Exact_Cosine_None_TF',
+            'Exact_Cosine_scBiMap_500d_TF',
+            'HNSW_Cosine_scBiMap_500d_TF',
+            'PQ_Cosine_scBiMap_500d_TF',
+        ])
+
+rule mytest3:
+    input:
+        expand("data/evaluation/human/HLA/ONT_R9/kmer_k16/{method}_overlap_stat.tsv",
+        method=[
+            'Exact_Euclidean_None_None',
+            'Exact_Euclidean_scBiMap_500d_TF-IDF',
+            'Exact_Euclidean_None_TF-IDF',
+            'Exact_Cosine_None_TF-IDF',
+            'Exact_Cosine_scBiMap_500d_TF-IDF',
+            'HNSW_Cosine_scBiMap_500d_TF-IDF',
+            'PQ_Cosine_scBiMap_500d_TF-IDF',
+            'Exact_Euclidean_scBiMap_500d_TF',
+            'Exact_Euclidean_None_TF',
+            'Exact_Cosine_None_TF',
+            'Exact_Cosine_scBiMap_500d_TF',
+            'HNSW_Cosine_scBiMap_500d_TF',
+            'PQ_Cosine_scBiMap_500d_TF',
+            'Minimap2',
+            'MinHash_Jaccard_None_None',
+        ])
+
+rule mytest4:
+    input:
+        expand("data/evaluation/human/{region}/ONT_R9/kmer_k16/{method}_overlap_stat.tsv",
+        method=[
+            'HNSW_Cosine_Spectural_500d_TF-IDF',
+            'HNSW_Cosine_Spectural_500d_IDF',
+            'HNSW_Cosine_Spectural_500d_None',
+            'HNSW_Cosine_Spectural_500d_TF',
+            'Exact_Cosine_Spectural_500d_TF-IDF',
+            'Exact_Cosine_Spectural_500d_IDF',
+            'Exact_Cosine_Spectural_500d_TF',
+            'Exact_Cosine_Spectural_500d_None',
+        ],region=['IGK','IGH','TRA'])
+rule mytest5:
+    input:
+        expand("data/evaluation/human/chr22/ONT_R9/kmer_k16/{method}_overlap_stat.tsv",
+        method=['SimHash_TF'])
