--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -11,6 +11,7 @@ REGIONS = dict(
 )
 
 
+
 wildcard_constraints:
     length_kb=r"\d+",
     sample=r"\w+",
@@ -49,7 +50,7 @@ rule simulate_perfect_sequencing_reads:
         "scripts/simulate_perfect_sequencing_reads.smk.py"
 
 
-rule run_pbsim3:
+rule run_pbsim3_ont:
     input:
         reference="data/regional_reference/{sample}/{region}/reference.fasta.gz",
         model="resources/pbsim/ERRHMM-ONT-HQ.model",
@@ -91,6 +92,42 @@ rule run_pbsim3:
         rm -rf {output.folder}/output*
         """
 
+rule run_pbsim3_pb_hifi:
+    input:
+        reference="data/regional_reference/{sample}/{region}/reference.fasta.gz",
+        model="resources/pbsim/ERRHMM-SEQUEL.model",
+    output:
+        folder=directory(
+            "data/regional_reads/{sample}/{region}/pbsim_pb_hifi_{length_kb}k"
+        ),
+        fasta="data/regional_reads/{sample}/{region}/pbsim_pb_hifi_{length_kb}k/reads.fasta.gz",
+        maf="data/regional_reads/{sample}/{region}/pbsim_pb_hifi_{length_kb}k/alignment.maf.gz",
+    params:
+        length_mean=lambda wildcards: int(wildcards["length_kb"]) * 1000,
+        pass_num=10,
+        depth=20,
+        seed=5023967,
+    conda:
+        "envs/pbsim.yaml"
+    shell:
+        """
+        gunzip -c {input.reference} \
+        | pbsim \
+            --strategy wgs \
+            --method errhmm \
+            --errhmm {input.model} \
+            --depth {params.depth} \
+            --length-mean {params.length_mean} \
+            --pass-num {params.pass_num} \
+            --genome /dev/stdin \
+            --seed {params.seed} \
+            --prefix {output.folder}/output
+        samtools sort -@ 10  {output.folder}/output_0001.sam -o  {output.folder}/output_0001.bam
+        ccs  -j 10 {output.folder}/output_0001.bam  {output.folder}/output_hifi.fastq.gz
+        gunzip -c {output.folder}/output_hifi.fastq.gz | sed -n '1~4s/^@/>/p;2~4p' | gzip -c > {output.fasta}
+        gzip -c {output.folder}/output_0001.maf > {output.maf}
+        rm -rf {output.folder}/output*
+        """
 
 rule get_perfect_read_info:
     input:
@@ -105,17 +142,30 @@ rule get_perfect_read_info:
         "scripts/get_perfect_read_info.smk.py"
 
 
-rule get_pbsim_metadata:
+rule get_pbsim_ONT_metadata:
     input:
         maf="data/regional_reads/{sample}/{region}/{platform}/alignment.maf.gz",
     output:
         tsv="data/regional_reads/{sample}/{region}/{platform}/read_info.tsv.gz",
     wildcard_constraints:
-        platform=r"pbsim_.+",
+        platform=r"pbsim_ONT.+",
     conda:
         "envs/default.yaml"
     script:
         "scripts/get_pbsim_read_info.smk.py"
+
+rule get_pbsim_pb_ccs_metadata:
+    input:
+        maf="data/regional_reads/{sample}/{region}/{platform}/alignment.maf.gz",
+        fasta="data/regional_reads/{sample}/{region}/{platform}/reads.fasta.gz",
+    output:
+        tsv="data/regional_reads/{sample}/{region}/{platform}/read_info.tsv.gz",
+    wildcard_constraints:
+        platform=r"pbsim_pb.+",
+    conda:
+        "envs/default.yaml"
+    script:
+        "scripts/get_pbsim_read_info_hifi.smk.py"
 
 rule kmer_encoding:
     input:
@@ -172,7 +222,8 @@ rule kmer_encoding_from_paf:
     script:
         "scripts/kmer_encoding.smk.py"
 
-#--------------------up for real data-------------------------------------------------------------
+#--------------------up for real data--------------------------------------------------------
+
 
 ##
 rule run_minimap2_ava:
@@ -276,20 +327,58 @@ rule evaluate_and_visualize_configs:
 
 # ----------------------------------------------------------------------------------------------------
 
+rule article_test_ont:
+    input:
+        expand("data/evaluation/TAIR/chr3/pbsim_pb_hifi_10k/kmer_k16/{method}_overlap_stat.tsv",
+        method=[
+            'WeightedMinHash_Jaccard_None_TF',
+            'WeightedMinHash_Jaccard_None_IDF',
+            'WeightedMinHash_Jaccard_None_TF-IDF',
+            'MinHash_Jaccard_None_None',
+            'Exact_Euclidean_None_None',
+            'Exact_Euclidean_None_TF',
+            'Exact_Euclidean_None_IDF',
+            'Exact_Euclidean_None_TF-IDF',
+            'Exact_Cosine_None_None',
+            'Exact_Cosine_None_TF',
+            'Exact_Cosine_None_IDF',
+            'Exact_Cosine_None_TF-IDF',
+            'HNSW_Cosine_None_None',
+            'HNSW_Euclidean_None_None',##add pre-process if fesible
+            'HNSW_Cosine_scBiMap_500d_None',
+            'HNSW_Cosine_scBiMap_500d_TF',
+            'HNSW_Cosine_scBiMap_500d_IDF',
+            'HNSW_Cosine_scBiMap_500d_TF-IDF',
+            'HNSW_Euclidean_scBiMap_500d_None',
+            'HNSW_Euclidean_scBiMap_500d_TF',
+            'HNSW_Euclidean_scBiMap_500d_IDF',
+            'HNSW_Euclidean_scBiMap_500d_TF-IDF',
+            'Minimap2',
+            'HNSW_Cosine_Spectural_500d_None',
+            'HNSW_Cosine_Spectural_500d_TF',
+            'HNSW_Cosine_Spectural_500d_IDF',
+            'HNSW_Cosine_Spectural_500d_TF-IDF',
+            'HNSW_Euclidean_Spectural_500d_None',
+            'HNSW_Euclidean_Spectural_500d_TF',
+            'HNSW_Euclidean_Spectural_500d_IDF',
+            'HNSW_Euclidean_Spectural_500d_TF-IDF',
+        ])
+
+rule tmp1:
+    input:
+        expand("data/evaluation/TAIR/chr3/pbsim_ONT_93_30k/kmer_k16/{method}_overlap_stat.tsv",
+        method=[
+            'SimHash_Cosine_None_TF',
+            'SimHash_Cosine_None_IDF',
+            'SimHash_Cosine_None_TF-IDF',
+            'SimHash_Cosine_None_None',
+        ])
+
+
 rule only_statistic:
     input:
-        expand("data/evaluation/human/chr22/ONT_R9/kmer_k16/{method}_overlap_stat.tsv",
-        method=[
-            'Exact_Euclidean_None_None',
-            'Exact_Euclidean_scBiMap_500d_None',
-            'Exact_Cosine_None_None',
-            'Exact_Cosine_scBiMap_500d_None',
-            'HNSW_Cosine_scBiMap_500d_None',
-            'PQ_Cosine_scBiMap_500d_None',
-            'Minimap2',
-            'MinHash_Jaccard_None_None',
-            'WeightedMinHash_Jaccard_None_None',
-        ])
+        expand("data/evaluation/human/{region}/ONT_R9/kmer_k16/SimHash_Cosine_None_None_overlap_stat.tsv",
+        region=['chr22'])
 rule only_statistic1:
     input:
         expand("data/evaluation/human/chr22/ONT_R9/kmer_k16/{method}_overlap_stat.tsv",
