--- a/workflow/envs/default.yaml
+++ b/workflow/envs/default.yaml
@@ -5,7 +5,7 @@ channels:
 dependencies:
   - biopython 
   - matplotlib 
-  - numpy 
+  - numpy == 1.26.4
   - pandas 
   - pysam
   - python >= 3.9
